[workspace]
members = [
    "crates/asciimath-rs",
    "crates/lean-rs",
    "crates/mathml-rs",
    "crates/mizar-rs",
    "crates/openmath-rs",
    "crates/qed",
    "crates/qed_formats",
    "crates/qed_prover",
    "crates/qed_server"
]
resolver = "2"

[workspace.dependencies]
asciimath-rs = { path = "crates/asciimath-rs" }
lean-rs = { path = "crates/lean-rs" }
mathml-rs = { path = "crates/mathml-rs" }
mizar-rs = { path = "crates/mizar-rs" }
openmath-rs = { path = "crates/openmath-rs" }
qed_prover = { path = "crates/qed_prover" }
qed_server = { path = "crates/qed_server" }
qed_formats = { path = "crates/qed_formats" }