[package]
name = "openmath-rs"
version = "0.0.0"
edition = "2021"
authors = ["Luca Lewin <contact@lucalewin.dev>"]
description = "openmath standard parser"
license = "MIT OR Apache-2.0"
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }

[dependencies]
