[package]
name = "qed"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
# qed_prover = { workspace = true }
# qed_server = { workspace = true }
# qed_formats = { workspace = true }
axum = "0.7.5"
hyper = { version = "1.0", features = [] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
lazy_static = "1.4.0"
path-slash = "0.2.1"
tera = "1.19.1"
thiserror = "1.0.58"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5.0"
serde = { version = "1", features = ["derive"] }
