[package]
name = "qed_server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# askama = "0.12.1"
# askama_axum = "0.4.0"
# axum = "0.7.4"
# tracing = "0.1.40"
# tracing-subscriber = "0.3.18"
